place card gui fixed, to fix the problem of overwrite card already placed